--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,21 @@
   height: 300px;
   overflow-y: auto;
 }
+
+.retry {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  background: #f41f62;
+  color: #fff;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
